plugins {
    id 'java'
}

version '1.0'

wrapper {
    gradleVersion = '7.2'
    distributionType = Wrapper.DistributionType.ALL
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

test {
    useJUnitPlatform()

    testLogging {
        events "passed", "skipped", "failed"
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'com.google.apis', name: 'google-api-services-gmail', version: 'v1-rev20200817-1.30.10'
    implementation group: 'com.google.apis', name: 'google-api-services-drive', version: 'v3-rev20200811-1.30.10'
    implementation group: 'com.google.api-client', name: 'google-api-client', version: '1.30.10'
    implementation group: 'com.google.api-client', name: 'google-api-client-java6', version: '1.30.10'
    implementation group: 'com.google.oauth-client', name: 'google-oauth-client-jetty', version: '1.31.0'
    implementation group: 'com.sun.activation', name: 'jakarta.activation', version: '1.2.2'
    implementation group: 'com.sun.mail', name: 'jakarta.mail', version: '1.6.5'
    implementation group: 'org.json', name: 'json', version: '20200518'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.8'
    implementation group: 'com.azure', name: 'azure-identity', version: '1.3.6'
    implementation group: 'com.microsoft.graph', name: 'microsoft-graph', version: '5.2.0'

    testImplementation(platform('org.junit:junit-bom:5.8.0'))
    testImplementation('org.junit.jupiter:junit-jupiter:5.8.0')
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    manifest {
        attributes 'Main-Class': 'server.Server'
    }
    zip64 = true
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    exclude "META-INF/*.SF", "META-INF/*.DSA", "META-INF/*.RSA"
}
